--- a/templates/ifcfg-ens192.j2
+++ b/templates/ifcfg-ens192.j2
@@ -4,6 +4,7 @@ ONBOOT=yes
 NETMASK={{NETMASK}}
 IPADDR={{IP}}
 GATEWAY={{GATEWAY}}
+DOMAIN={{domain}}
 PEERDNS=no
 {%   for ns in ext_dns %}
 DNS{{ loop.index }}={{ ns }}
